# untitled-cpp

./: .gitignore  Application.cpp  Application.h  CMakeLists.txt  README.md  main.cpp
elementary/: Atom.cpp  Atom.h  ElementaryApplication.cpp  ElementaryApplication.h
utils/: Logging.cpp  Logging.h
